--- a/pages/index.html
+++ b/pages/index.html
@@ -10,6 +10,9 @@
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
     <!-- My Style && Scripts -->
     <link rel="stylesheet" href="../style/style.css">
     <script src="../script/script.js"></script>
@@ -17,6 +20,8 @@
     <!-- MetaData -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a simple portfolio of GabriDG; i'm a full stack web developer and UX designer. All made by me using VSCode with HTML, CSS, JavaScript, also i'm considering to add a database on MySQL using PHP.">
+    <link rel="icon" href="../datas/37.webp">
 
     <title>GabriDG</title>
 </head>
@@ -53,7 +58,24 @@
         </nav>
     </header>
     <main>
-
+        <div>
+            <div class="row">
+                <div id="col-6">
+                    <img src="" alt="">
+                </div>
+                <div id="col-6">
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div id="col-6">
+                    <img src="" alt="">
+                </div>
+                <div id="col-6">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
