--- a/pages/links.html
+++ b/pages/links.html
@@ -58,30 +58,8 @@
         </nav>
     </header>
     <main id="main">
-        <div class="container">
-            <div class="row text-center">
-                <small class="text-center">Some of this project will not be reachable because they are a part of some agency project that are work in progress</small>
-                <div class="col-6">
-                    <a href="">
-                        <img src="" alt="">
-                    </a>
-                </div>
-                <div class="col-6">
-                    <a href="">
-                        <img src="" alt="">
-                    </a>
-                </div>
-                <div class="col-6">
-                    <a href="http://gevobadge.it" target="_blank">
-                        <img src="../datas/project-3.png" alt="image rapresentative my third project">
-                    </a>
-                </div>
-                <div class="col-6">
-                    <a href="">
-                        <img src="" alt="">
-                        </a>
-                </div>
-            </div>
+        <div class="container text-center">
+            
         </div>
     </main>
 
