--- a/pages/about.html
+++ b/pages/about.html
@@ -37,29 +37,29 @@
             <i id="close-menu" class="fa-solid fa-x hidden"></i>
             <ul id="burger-list" class="hidden">
                 <li>
-                    <a href="pages/index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="pages/about.html">About</a>
+                    <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="pages/projects.html">Projects</a>
+                    <a href="projects.html">Projects</a>
                 </li>
                 <li>
-                    <a href="pages/knowledge.html">Knowledge</a>
+                    <a href="knowledge.html">Knowledge</a>
                 </li>
                 <li>
-                    <a href="pages/certificates.html">Certificates</a>
+                    <a href="certificates.html">Certificates</a>
                 </li>
                 <li>
-                    <a href="pages/links.html">Links</a>
+                    <a href="links.html">Links</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main id="main">
         <div class="container text-center">
-            
+            <p class="description">Hi everyone! I'm Gabriele, a full stack web developer and UX designer I'm a passionate of videogaming from develope it to play it, also I'm a father of a beatiful boy. Enthusiast to learn new technologies or method to develope what i want or what i need.</p>
         </div>
     </main>
 
