--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -37,22 +37,22 @@
             <i id="close-menu" class="fa-solid fa-x hidden"></i>
             <ul id="burger-list" class="hidden">
                 <li>
-                    <a href="pages/index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="pages/about.html">About</a>
+                    <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="pages/projects.html">Projects</a>
+                    <a href="projects.html">Projects</a>
                 </li>
                 <li>
-                    <a href="pages/knowledge.html">Knowledge</a>
+                    <a href="knowledge.html">Knowledge</a>
                 </li>
                 <li>
-                    <a href="pages/certificates.html">Certificates</a>
+                    <a href="certificates.html">Certificates</a>
                 </li>
                 <li>
-                    <a href="pages/links.html">Links</a>
+                    <a href="links.html">Links</a>
                 </li>
             </ul>
         </nav>
