--- a/pages/index.html
+++ b/pages/index.html
@@ -37,22 +37,22 @@
             <i id="close-menu" class="fa-solid fa-x hidden"></i>
             <ul id="burger-list" class="hidden">
                 <li>
-                    <a href="pages/index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="pages/about.html">About</a>
+                    <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="pages/projects.html">Projects</a>
+                    <a href="projects.html">Projects</a>
                 </li>
                 <li>
-                    <a href="pages/knowledge.html">Knowledge</a>
+                    <a href="knowledge.html">Knowledge</a>
                 </li>
                 <li>
-                    <a href="pages/certificates.html">Certificates</a>
+                    <a href="certificates.html">Certificates</a>
                 </li>
                 <li>
-                    <a href="pages/links.html">Links</a>
+                    <a href="links.html">Links</a>
                 </li>
             </ul>
         </nav>
@@ -60,7 +60,9 @@
     <main id="main">
         <div class="container">
             <div class="row text-center">
-                <small class="text-center">Some of this project will not be reachable because they are a part of some agency project that are work in progress</small>
+                <div id="info">
+                    <span id="typing-text" class="typing-effect"></span>
+                </div>
                 <div class="col-6">
                     <a href="">
                         <img src="" alt="">
@@ -68,12 +70,12 @@
                 </div>
                 <div class="col-6">
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../datas/project-2.png" alt="image rapresentative of my second project's login">
                     </a>
                 </div>
                 <div class="col-6">
                     <a href="http://gevobadge.it" target="_blank">
-                        <img src="../datas/project-3.png" alt="image rapresentative my third project">
+                        <img src="../datas/project-3.png" alt="image rapresentative of my third project">
                     </a>
                 </div>
                 <div class="col-6">
@@ -81,10 +83,11 @@
                         <img src="" alt="">
                         </a>
                 </div>
+                <small class="text-center">Some of this project will not be reachable because they are a part of some agency project that are work in progress</small>
             </div>
         </div>
     </main>
-
+    
     <footer>
 
     </footer>
