fixed & added style on index

--- a/pages/about.html
+++ b/pages/about.html
@@ -59,7 +59,11 @@
     </header>
     <main id="main">
         <div class="container text-center">
-            <p class="description">Hi everyone! I'm Gabriele, a full stack web developer and UX designer I'm a passionate of videogaming from develope it to play it, also I'm a father of a beatiful boy. Enthusiast to learn new technologies or method to develope what i want or what i need.</p>
+            <p class="description">Hi everyone! I'm Gabriele, a full stack web developer and UX designer I'm a passionate of videogaming from develope it to play it, also I'm a father of a beatiful boy. Enthusiast to learn new technologies or method to develope what i want or what i need.
+                I began to become passionate about the world of technology through video games, especially FPS, and as time passed I began to ask myself more and more insistently how they could be developed; so I started developing my first very basic games, such as "minesweeper", "flappy birds" and "space invaders" obviously with some personal reinterpretations. 
+                Understanding that I was passionate about this world, having obtained my scientific diploma, I began to take courses and obtain certifications to be able to learn everything I had and needed better and with a study criterion. I started with websites due to their lower complexity in development but due attention to detail and user detail, with responsiveness and scripts to improve the user experience. 
+                I've currently been working as a full stack web developer for two and a half years but my secret dream is always to work for a large video game company, hoping one day to succeed.
+            </p>
         </div>
     </main>
 
