--- a/pages/index.html
+++ b/pages/index.html
@@ -65,12 +65,12 @@
                 </div>
                 <div class="col-6">
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../datas/project-4.png" alt="image rapresentative one of my project">
                     </a>
                 </div>
                 <div class="col-6">
                     <a href="">
-                        <img src="../datas/project-2.png" alt="image rapresentative of my second project's login">
+                        <img src="../datas/project.png" alt="image rapresentative of my second project with Python AI">
                     </a>
                 </div>
                 <div class="col-6">
@@ -80,7 +80,7 @@
                 </div>
                 <div class="col-6">
                     <a href="">
-                        <img src="" alt="">
+                        <img src="../datas/project-5.png" alt="image rapresentative of my fourth project">
                         </a>
                 </div>
                 <small class="text-center">Some of this project will not be reachable because they are a part of some agency project that are work in progress</small>
